--- a/Instructions/Starter_Code/financial-planner.ipynb
+++ b/Instructions/Starter_Code/financial-planner.ipynb
@@ -30,14 +30,14 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "# Set current amount of crypto assets\n",
-    "# YOUR CODE HERE!"
+    "my_btc = 1.2\n",
+    "my_eth = 5.3"
    ]
   },
   {
@@ -82,27 +83,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The current value of your 1.2 BTC is $14309.16\n",
-      "The current value of your 5.3 ETH is $2096.47\n"
+      "The current value of your 1.2 BTC is $13801.63\nThe current value of your 5.3 ETH is $2002.29\n"
      ]
     }
    ],
    "source": [
     "# Fetch current BTC price\n",
-    "# YOUR CODE HERE!\n",
+    "btc_req = requests.get(btc_url)\n",
+    "btc_data = btc_req.json()\n",
+    "btc_price = btc_data['data']['1']['quotes']['USD']['price']\n",
+    "\n",
     "\n",
     "# Fetch current ETH price\n",
-    "# YOUR CODE HERE!]\n",
+    "eth_req = requests.get(eth_url)\n",
+    "eth_data = eth_req.json()\n",
+    "eth_price = eth_data['data']['1027']['quotes']['USD']['price']\n",
     "\n",
     "# Compute current value of my crpto\n",
-    "# YOUR CODE HERE!\n",
+    "my_btc_value = my_btc * btc_price\n",
+    "my_eth_value = my_eth * eth_price\n",
     "\n",
     "# Print current crypto wallet balance\n",
     "print(f\"The current value of your {my_btc} BTC is ${my_btc_value:0.2f}\")\n",
@@ -2361,9 +2367,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.8.3 64-bit ('base': conda)",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -2375,7 +2385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
