--- a/Instructions/Starter_Code/financial-planner.ipynb
+++ b/Instructions/Starter_Code/financial-planner.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 46
     }
    ],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The current value of your 1.2 BTC is $13801.63\nThe current value of your 5.3 ETH is $2002.29\n"
+      "The current value of your 1.2 BTC is $13806.79\nThe current value of your 5.3 ETH is $2006.69\n"
      ]
     }
    ],
@@ -124,35 +124,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Current amount of shares\n",
-    "# YOUR CODE HERE!"
+    "my_agg = 200\n",
+    "my_spy = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set Alpaca API key and secret\n",
-    "# YOUR CODE HERE!\n",
+    "alpaca_api_key = os.getenv(\"APCA_API_KEY\")\n",
+    "alpaca_secret_key = os.getenv(\"APCA_API_SECRET\")\n",
     "\n",
     "# Create the Alpaca API object\n",
-    "# YOUR CODE HERE!"
+    "alpaca = tradeapi.REST(\n",
+    "    alpaca_api_key,\n",
+    "    alpaca_secret_key,\n",
+    "    api_version=\"v2\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                              AGG                                      SPY  \\\n",
+       "                             open    high     low   close   volume    open   \n",
+       "2020-10-15 00:00:00-04:00  118.15  118.15  117.96  117.97  4977703  343.71   \n",
+       "\n",
+       "                                                             \n",
+       "                             high     low   close    volume  \n",
+       "2020-10-15 00:00:00-04:00  348.02  343.13  347.51  50609035  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th colspan=\"5\" halign=\"left\">AGG</th>\n      <th colspan=\"5\" halign=\"left\">SPY</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>volume</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-10-15 00:00:00-04:00</th>\n      <td>118.15</td>\n      <td>118.15</td>\n      <td>117.96</td>\n      <td>117.97</td>\n      <td>4977703</td>\n      <td>343.71</td>\n      <td>348.02</td>\n      <td>343.13</td>\n      <td>347.51</td>\n      <td>50609035</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
    "source": [
     "# Format current date as ISO format\n",
-    "# YOUR CODE HERE!\n",
+    "start_date = pd.Timestamp(\"2020-10-15\", tz=\"America/New_York\").isoformat()\n",
+    "end_date = pd.Timestamp(\"2020-10-15\", tz=\"America/New_York\").isoformat()\n",
     "\n",
     "# Set the tickers\n",
     "tickers = [\"AGG\", \"SPY\"]\n",
@@ -161,29 +186,35 @@
     "timeframe = \"1D\"\n",
     "\n",
     "# Get current closing prices for SPY and AGG\n",
-    "# YOUR CODE HERE!\n",
+    "df_ticker = alpaca.get_barset(\n",
+    "    tickers,\n",
+    "    timeframe,\n",
+    "    start=start_date,\n",
+    "    end=end_date\n",
+    ").df\n",
+    "\n",
     "\n",
     "# Preview DataFrame\n",
-    "# YOUR CODE HERE!"
+    "df_ticker.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Current AGG closing price: $119.445\n",
-      "Current SPY closing price: $334.55\n"
+      "Current AGG closing price: $117.97\nCurrent SPY closing price: $347.51\n"
      ]
     }
    ],
    "source": [
     "# Pick AGG and SPY close prices\n",
-    "# YOUR CODE HERE!\n",
+    "agg_close_price = df_ticker[\"AGG\"][\"close\"][\"2020-10-15 00:00:00-04:00\"]\n",
+    "spy_close_price = df_ticker[\"SPY\"][\"close\"][\"2020-10-15 00:00:00-04:00\"]\n",
     "\n",
     "# Print AGG and SPY close prices\n",
     "print(f\"Current AGG closing price: ${agg_close_price}\")\n",
@@ -192,21 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The current value of your 50 SPY shares is $16727.50\n",
-      "The current value of your 200 AGG shares is $23889.00\n"
+      "The current value of your 50 SPY shares is $17375.50\nThe current value of your 200 AGG shares is $23594.00\n"
      ]
     }
    ],
    "source": [
     "# Compute the current value of shares\n",
-    "# YOUR CODE HERE!\n",
+    "my_agg_value = my_agg * agg_close_price\n",
+    "my_spy_value = my_spy * spy_close_price\n",
     "\n",
     "# Print current value of share\n",
     "print(f\"The current value of your {my_spy} SPY shares is ${my_spy_value:0.2f}\")\n",
